# mistral-rs

./: .gitignore  dataset.py  install.sh  model.py  pyproject.toml  train.py
